# writing_observer

./: .gitignore  Dockerfile  Makefile  README.md  VERSION  package.json  requirements.txt  wo_requirements.txt
autodocs/: reference.rst
devops/: README.md
docs/concepts/: merkle_dag_storage.md  system_settings.md
docs/how-to/: offline_replay.md
docs/reference/: lo_assets.md  module_inventory.md  system_settings.md
docs/tutorials/: install.md  workshop.md
extension/writing-process/: package.json
learning_observer/: VERSION
learning_observer/learning_observer/: dash_integration.py  dashboard.py  doc_processor.py  downloads.py  incoming_student_event.py  log_event.py  lorem.py  main.py  merkle_store.py  module.py  offline.py  remote_assets.py  rosters.py  routes.py  settings.py  synthetic_student_data.py
modules/lo_dash_react_components/: README.md  package-lock.json  package.json
modules/lo_event/: package.json
modules/portfolio_diff/: README.md  build_and_add_to_module.sh  next.config.mjs  package.json
modules/toy-assess/: README.md  package.json
modules/wo_bulk_essay_analysis/: VERSION  setup.cfg
modules/wo_classroom_text_highlighter/: VERSION
modules/wo_common_student_errors/: setup.cfg
modules/wo_document_list/: setup.cfg
modules/wo_highlight_dashboard/: setup.cfg
modules/wo_portfolio_diff/: .gitignore  MANIFEST.in  README.md  VERSION  setup.cfg  test.sh
modules/wo_portfolio_diff/tests/: test_utils.py
modules/wo_portfolio_diff/wo_portfolio_diff/: module.py
scripts/: package.json  stream_writing.py
ux/: ux.html
(+54 files in other folders)
