[metadata]
name = Writing Observer Portfolio Diff
version = file:VERSION
description = Use this as a base template for creating new modules on the Learning Observer.

[options]
packages = wo_portfolio_diff

[options.package_data]
wo_portfolio_diff = assets/*

[options.entry_points]
lo_modules =
   wo_portfolio_diff = wo_portfolio_diff.module
